@@ -24,7 +24,8 @@ PATHPREFIX =
 TESTS_ENVIRONMENT = PATH="$(PATHPREFIX)$$(pwd)/../src/0pre/bin:$$PATH" sh
 TESTS = alive.test \
   t000.test \
-  t001.test
+  t001.test \
+  t999.test
 
 EXTRA_DIST = $(TESTS)
 
